apply_source_signals_arrays.m   apply_source_signals_arrays apply_source_signals.py    apply_source_signals_array
apply_source_signals_mics.m   apply_source_signals_mics  apply_source_signals.py    apply_source_signals_mic
apply_source_signals_sh.m   apply_source_signals_sh  apply_source_signals.py    apply_source_signals_sh
compute_echograms_arrays.m  compute_echograms_arrays compute_echograms.py compute_echograms_array
compute_echograms_mics.m  compute_echograms_mics compute_echograms.py compute_echograms_mic
compute_echograms_sh.m  compute_echograms_sh compute_echograms.py compute_echograms_sh
ims_coreMtx.m   ims_coreMtx image_source_method.py ims_coreMtx
ims_coreMtx.m   ims_coreN image_source_method.py ims_coreN
ims_coreMtx.m   ims_coreT image_source_method.py ims_coreT
rec_moduleMic.m rec_moduleMic   rec_module.py   rec_module_mic
rec_moduleSH.m rec_moduleSH   rec_module.py   rec_module_sh
render_rirs.m    render_rirs  render_rirs.py render_rirs
render_array_rirs.m render_array_rirs   render_rirs.py render_rirs_array
render_mic_rirs.m render_mic_rirs   render_rirs.py render_rirs_mic
render_sh_rirs.m render_sh_rirs   render_rirs.py render_rirs_sh
filter_rir.m    filter_rir  render_rirs.py  filter_rirs
render_quantized.m  render_quantized    render_rirs.py  render_quantized
apply_absorption.m apply_absorption   apply_absorption.py    apply_absorption
-   -   echogram.py Echogram
-   -   ../utils.py cart2sph()


_____________________________________________
METHOD SPLIT INTO SCRIPTS
getRTsabine
ims_coreN
ims_coreT

_____________________________________________
RENAMED PYTHON METHODS (avoid method and file with same name, so getattr() cannot be used in a general way)
absorption_module.py::absorption_module() -> absorption_module.py::apply_absorption()


_____________________________________________
getSH

normalization of real sh is applied in order to match matlab implementation.
However, it is still not clear for me which is the criteria...